Thu Sep 13 08:57:26 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/dynamic1.c: use tds_set_param_type

Thu Sep 06 13:15:54 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/tds.html: update for tds9
	* src/tds/read.c: work if initial in_pos is != 0

Sat Aug 25 12:32:01 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
	- use ODBC_API instead of SQL_API to allow combined compile

Fri Aug 24 11:50:03 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/blk.c src/dblib/bcp.c src/tds/login.c:
	* src/tds/query.c src/tds/token.c:
	- small changes for TDS 9.0

Mon Aug 16 10:09:42 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/Makefile.am src/dblib/unittests/Makefile.am:
	* src/odbc/unittests/Makefile.am src/tds/net.c:
	* src/tds/unittests/Makefile.am:
	- remove other warnings

Mon Aug 16 08:29:38 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/convert.c win32/initnet.c:	
	- remove some warnings compiling with MingW

Sat Aug 11 08:51:45 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c vms/config_h.vms vms/descrip_mms.template:
	- applied Craig A. Berry patch #1772080 for VMS systems

Fri Aug 10 11:17:32 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* NEWS: updated

Fri Aug 10 11:14:19 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/dev-cpp/Makefile.win: add missing file

Thu Aug 09 14:52:45 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: small fixes

Thu Aug 09 10:26:51 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml: document port override syntax

Thu Aug 09 09:49:34 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/htdoc/basic_jdbc_question.html doc/htdoc/contrib.html:
	* doc/htdoc/docs.html doc/htdoc/index.html doc/htdoc/news.html:
	* doc/htdoc/software.html doc/htdoc/support.html: